--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,24 +2,44 @@
 <table>
   <thead>
     <tr>
-      <th>Title</tr>
-      <th>Body</tr>
+      <th>Title</th>
+      <th>Body</th>
       <th colspan="3"></th>
     </tr>
-  </table>
-
-<h1>New book</h1>
-
-<%= form_with model: @book do |f| %>
-
-   
- <h4>Title</h4>
- <%= f.text_field :title %>
-
- <h4>Body</h4>
- <%= f.text_area :body %>
-
- <%= f.submit 'Create Book' %>
-
-
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to "Show", book_path(book) %></td>
+        <td><%= link_to "Edit", edit_book_path(book) %></td>
+        <td><%= link_to "Destroy", book_path(book), method: :delete, "data-confirm" => "Are you sure?" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<h2>New book</h2>
+<% if @book.errors.any? %>
+  <div id="error_explanation" class="alert alert-danger">
+  <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+<%= form_for(@book) do |f| %>
+  <div class="field">
+    <label for="book_title">Title</label>
+    <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <label for="book_body">Body</label>
+    <%= f.text_area :body %>
+  </div>
+  <div class="actions">
+    <%= f.submit 'Create Book' %>
+  </div>
 <% end %>
