--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,13 +1,29 @@
-<h1>New book</h1>
+<h2>New book</h2>
 
 <%= form_with model: @book do |f| %>
  <h4>Title</h4>
  <%= f.text_field :title %>
-	
+
   <h4>Body</h4>
   <%= f.text_area :body %>
-	
+
   <%= f.submit 'Create Book' %>
+
+
+
+<h2>New book</h2>
+<%= form_with model:book, local:true do |f| %>
+  <div class="field row">
+    <%= f.label :title %>
+    <%= f.text_field :title, class:"col-xs-12" %>
+  </div>
+  <div class="field row">
+    <%= f.label :body %>
+    <%= f.text_area :body, class:"col-xs-12" %>
+  </div>
+  <div class="actions row">
+    <%= f.submit class: "btn btn-primary col-xs-12" %>
+  </div>
 
 
 <% end %>
