--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,10 @@
-　<h1>
-　 ようこそ 
-　 <strong>Bookers</strong>
-　 へ!
-  </h1>
+<!--この画面をルートパスに設定-->
+<header>
+  <h1>ようこそ Bookers へ！</h1>
+</header>
 
-  <p>
-    <strong>Bookers</strong>
-    では、さまざまな書籍に関するあなたの意見や
-  </p>
+<body>
+  <p><span>Bookers</span> では、さまざまな書籍に関するあなたの意見や</p>
   <p>印象を共有し交換することができます</p>
-  <p>
-    <a href="/books">start</a>
-　</p>
+  <p><%= link_to "start", books_path %></p>
+</body>
